--- a/index-appointment.html
+++ b/index-appointment.html
@@ -676,7 +676,7 @@
                               <div class="single-popup-wrap">
                                 <img
                                   class="img-fluid"
-                                  src="assets/images/bg/home-processing-video-intro-slider-slide-01-image-01-570x350.webp"
+                                  src="assets/img/26.webp"
                                   alt=""
                                 />
                                 <div class="ht-popup-video video-button">
