--- a/index-machine-learning.html
+++ b/index-machine-learning.html
@@ -253,7 +253,7 @@
                                 <div class="main-video-box video-popup">
                                     <a href="https://www.youtube.com/watch?v=9No-FiEInLA" class="video-link  mt-30">
                                         <div class="single-popup-wrap">
-                                            <img class="img-fluid border-radus-5" src="assets/images/banners/n-popup.webp" alt="">
+                                            <img class="img-fluid border-radus-5" src="assets/img/53.webp" alt="">
                                             <div class="ht-popup-video video-button">
                                                 <div class="video-mark">
                                                     <div class="wave-pulse wave-pulse-1"></div>
@@ -448,7 +448,7 @@
                                     <div class="grid-item">
                                         <div class="ht-team-member">
                                             <div class="team-image">
-                                                <img class="img-fluid" src="assets/images/team/team-member-01-370x250.webp" alt="">
+                                                <img class="img-fluid" src="assets/img/31.webp" alt="">
                                                 <div class="social-networks">
                                                     <div class="inner">
                                                         <a target="_blank" href="#" class=" hint--bounce  hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook"></i>
@@ -471,7 +471,7 @@
                                     <div class="grid-item">
                                         <div class="ht-team-member">
                                             <div class="team-image">
-                                                <img class="img-fluid" src="assets/images/team/team-member-07-370x250.webp" alt="">
+                                                <img class="img-fluid" src="assets/img/32.webp" alt="">
                                                 <div class="social-networks">
                                                     <div class="inner">
                                                         <a target="_blank" href="#" class=" hint--bounce  hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook"></i>
@@ -494,7 +494,7 @@
                                     <div class="grid-item">
                                         <div class="ht-team-member">
                                             <div class="team-image">
-                                                <img class="img-fluid" src="assets/images/team/team-member-04-370x250.webp" alt="">
+                                                <img class="img-fluid" src="assets/img/33.webp" alt="">
                                                 <div class="social-networks">
                                                     <div class="inner">
                                                         <a target="_blank" href="#" class=" hint--bounce  hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook"></i>
@@ -517,7 +517,7 @@
                                     <div class="grid-item">
                                         <div class="ht-team-member">
                                             <div class="team-image">
-                                                <img class="img-fluid" src="assets/images/team/team-member-02-370x250.webp" alt="">
+                                                <img class="img-fluid" src="assets/img/34.webp" alt="">
                                                 <div class="social-networks">
                                                     <div class="inner">
                                                         <a target="_blank" href="#" class=" hint--bounce  hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook"></i>
@@ -568,7 +568,7 @@
                                         <a href="#" class="projects-wrap style-01 wow move-up">
                                             <div class="projects-image-box">
                                                 <div class="projects-image">
-                                                    <img class="img-fluid" src="assets/images/projects/case-study-01-480x298.webp" alt="">
+                                                    <img class="img-fluid" src="assets/img/11.webp" alt="">
                                                 </div>
                                                 <div class="content">
                                                     <h6 class="heading">Aeroland-Smart Vision</h6>
@@ -590,7 +590,7 @@
                                         <a href="#" class="projects-wrap style-01 wow move-up">
                                             <div class="projects-image-box">
                                                 <div class="projects-image">
-                                                    <img class="img-fluid" src="assets/images/projects/case-study-02-480x298.webp" alt="">
+                                                    <img class="img-fluid" src="assets/img/12.webp" alt="">
                                                 </div>
                                                 <div class="content">
                                                     <h6 class="heading">Arden-Internal Networking</h6>
@@ -612,7 +612,7 @@
                                         <a href="#" class="projects-wrap style-01 wow move-up">
                                             <div class="projects-image-box">
                                                 <div class="projects-image">
-                                                    <img class="img-fluid" src="assets/images/projects/case-study-03-480x298.webp" alt="">
+                                                    <img class="img-fluid" src="assets/img/13.webp" alt="">
                                                 </div>
                                                 <div class="content">
                                                     <h6 class="heading">A Freeserve case study</h6>
@@ -684,7 +684,7 @@
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="testimonials-image text-center mt-20">
-                                                    <img src="assets/images/testimonial/home-cybersecurity-contact-bg-image.webp" class="img-fluid" alt="">
+                                                    <img src="assets/img/40.webp" class="img-fluid" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -703,7 +703,7 @@
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="testimonials-image text-center mt-20">
-                                                    <img src="assets/images/testimonial/home-infotechno-main-slider-slide-01-image-02-587x572.webp" class="img-fluid" alt="">
+                                                    <img src="assets/img/54.webp" class="img-fluid" alt="">
                                                 </div>
                                             </div>
                                         </div>
