--- a/index-processing.html
+++ b/index-processing.html
@@ -683,7 +683,7 @@
                         <div class="box-large-image__midea">
                           <div
                             class="single-gallery__thum bg-item-images bg-img"
-                            data-bg="assets/images/box-image/home-processing-software-image-01.webp"
+                            data-bg="assets/img/44.webp"
                           ></div>
                         </div>
 
@@ -711,7 +711,7 @@
                         <div class="box-large-image__midea">
                           <div
                             class="single-gallery__thum bg-item-images bg-img"
-                            data-bg="assets/images/box-image/home-processing-software-image-02.webp"
+                            data-bg="assets/img/37.webp"
                           ></div>
                         </div>
 
@@ -740,7 +740,7 @@
                         <div class="box-large-image__midea">
                           <div
                             class="single-gallery__thum bg-item-images bg-img"
-                            data-bg="assets/images/box-image/home-processing-software-image-03.webp"
+                            data-bg="assets/img/45.webp"
                           ></div>
                         </div>
 
@@ -768,7 +768,7 @@
                         <div class="box-large-image__midea">
                           <div
                             class="single-gallery__thum bg-item-images bg-img"
-                            data-bg="assets/images/box-image/home-processing-software-image-04.webp"
+                            data-bg="assets/img/46.webp"
                           ></div>
                         </div>
 
@@ -796,7 +796,7 @@
                         <div class="box-large-image__midea">
                           <div
                             class="single-gallery__thum bg-item-images bg-img"
-                            data-bg="assets/images/box-image/mitech-home-infotechno-box-large-image_02-330x330.webp"
+                            data-bg="assets/img/9.webp"
                           ></div>
                         </div>
 
@@ -824,7 +824,7 @@
                         <div class="box-large-image__midea">
                           <div
                             class="single-gallery__thum bg-item-images bg-img"
-                            data-bg="assets/images/box-image/mitech-home-infotechno-box-large-image_04-330x330.webp"
+                            data-bg="assets/img/10.webp"
                           ></div>
                         </div>
 
